--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             9 model 
         </h3>
         <h1>Our Location</h1>
-        <img src="pictures/map.jpg"  alt="District 9 Location">
+        <img src="map.jpg"  alt="District 9 Location">
     </figure>
 
     <figure id="d">
@@ -106,4 +106,5 @@
 </section>
 
     </body>
+
 </html>
